authentication with github

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
+#Database
 DATABASE_URL="file:./dev.db"
+
+#Github (Web)
+# GITHUB_CLIENT_ID=c98b3cedadf95cfcdf19
+# GITHUB_CLIENT_SECRET=1cafc3fd6280e6c7e3b36a5fbb6c01f10f40642d
+
+#Github (Mobile)
+GITHUB_CLIENT_ID=bb14edd77ab3d6c0bea4
+GITHUB_CLIENT_SECRET=b82c52a0a668d2ba5cda136cd31bbacdca0d157b
